[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for accessing documentation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Chirag Singhal", email = "chirag127@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.1",
]

[project.scripts]
docs-mcp-server = "docs_mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["docs_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py38"]
